--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,19 +1,44 @@
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-	<a class="navbar-brand" href="/">Ruqqus Auth</a>
-	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-		<span class="navbar-toggler-icon"></span>
-	</button>
-	<div class="collapse navbar-collapse" id="collapsibleNavbar">
-		<ul class="navbar-nav">
-			<li class="nav-item">
-				<a class="nav-link" href="/">Home</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="/about">About</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="/help">Help</a>
-			</li>
-		</ul>
+<nav class="navbar navbar-expand-sm fixed-top navbar-light">
+	<div class="container">
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbar">
+			<ul class="navbar-nav">
+				<li class="nav-item active">
+					<a class="nav-link text-white active" href="/help">Help</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link text-white active" href="/about">About</a>
+				</li>
+				<li class="nav-item active">
+					<a class="nav-link text-white active" href="/faq">FAQ</a>
+				</li>
+			</ul>
+			<ul class="navbar-nav ml-auto">
+				<li class="nav-item active">
+					<a class="nav-link text-white active" href="https://github.com/Panjkrc/ruqqus-auth" target="blank"><i class="fab fa-github"></i></a>
+				</li>
+			</ul>
+		</div>
 	</div>
 </nav>
+
+<script>
+	$(document).ready(function () {
+
+
+		$(window).scroll(function () {
+			var scroll = $(window).scrollTop();
+			if (scroll >= $(window).height()) {
+				$(".navbar").addClass("bg-light");
+				$(".nav-link").removeClass("text-white");
+			} else {
+				$(".navbar").removeClass("bg-light");
+				$(".nav-link").addClass("text-white");
+			}
+		});
+
+
+	});
+</script>
