--- a/views/errors/404.ejs
+++ b/views/errors/404.ejs
@@ -16,7 +16,7 @@
                 <h1>
                     404</h1>
                 <h2>
-                    Page bot found!</h2>
+                    Page not found!</h2>
                 <div class="error-details">
 					Sorry, an error happened! Requested page not found!
                 </div>
