--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,20 +8,20 @@
 <header>
 	<div class="container">
 		<div class="jumbotron front text-center"></div>
-			<div class="container">
-				<h1 class="display-3 text-white" style="font-family: 'Inter', sans-serif;">
-					AutoAuth
-					<br>
-					for
-					<br>
-					ruqqus
-				</h1>
+		<div class="container">
+			<h1 class="display-3 text-white" style="font-family: 'Inter', sans-serif;">
+				AutoAuth
 				<br>
-				<hr>
+				for
 				<br>
-				<p class="text-white">Automatic and secure way to get <strong>ruqqus</strong> api authentication token</p>
-			</div>
+				ruqqus
+			</h1>
+			<br>
+			<hr>
+			<br>
+			<p class="text-white">Automatic and secure way to get <strong>ruqqus</strong> api authentication token</p>
 		</div>
+	</div>
 	</div>
 </header>
 
@@ -31,46 +31,50 @@
 		<div class="container pt-5">
 			<div class="row">
 				<div class="col-12">
-					<h3>Content...</h3>
-					<p>Sriracha biodiesel taxidermy organic post-ironic, Intelligentsia salvia mustache 90's code
-						editing brunch. Butcher polaroid VHS art party, hashtag Brooklyn deep v PBR narwhal sustainable
-						mixtape swag wolf squid tote bag. Tote bag cronut semiotics,
-						raw denim deep v taxidermy messenger bag. Tofu YOLO Etsy, direct trade ethical Odd Future jean
-						shorts paleo. Forage Shoreditch tousled aesthetic irony, street art organic Bushwick artisan
-						cliche semiotics ugh synth chillwave meditation.
-						Shabby chic lomo plaid vinyl chambray Vice. Vice sustainable cardigan, Williamsburg master
-						cleanse hella DIY 90's blog.</p>
+					<h3>Get your access key</h3>
+					<p>Input your app's info. Don't worry, none of the info is stored.</p>
 
-					<p>Ethical Kickstarter PBR asymmetrical lo-fi. Dreamcatcher street art Carles, stumptown gluten-free
-						Kickstarter artisan Wes Anderson wolf pug. Godard sustainable you probably haven't heard of
-						them, vegan farm-to-table Williamsburg slow-carb
-						readymade disrupt deep v. Meggings seitan Wes Anderson semiotics, cliche American Apparel
-						whatever. Helvetica cray plaid, vegan brunch Banksy leggings +1 direct trade. Wayfarers codeply
-						PBR selfies. Banh mi McSweeney's Shoreditch selfies,
-						forage fingerstache food truck occupy YOLO Pitchfork fixie iPhone fanny pack art party Portland.
-					</p>
-					<p>Sriracha biodiesel taxidermy organic post-ironic, Intelligentsia salvia mustache 90's code
-						editing brunch. Butcher polaroid VHS art party, hashtag Brooklyn deep v PBR narwhal sustainable
-						mixtape swag wolf squid tote bag. Tote bag cronut semiotics,
-						raw denim deep v taxidermy messenger bag. Tofu YOLO Etsy, direct trade ethical Odd Future jean
-						shorts paleo. Forage Shoreditch tousled aesthetic irony, street art organic Bushwick artisan
-						cliche semiotics ugh synth chillwave meditation.
-						Shabby chic lomo plaid vinyl chambray Vice. Vice sustainable cardigan, Williamsburg master
-						cleanse hella DIY 90's blog.</p>
+					<form action="/auth" method="POST">
+						<div class="form-group">
+							<label for="client_id">CLIENT ID</label>
+							<input type="text" class="form-control" id="client_id" name="client_id"
+								aria-describedby="client_id_help" placeholder="Enter CLIENT ID">
+						</div>
+						<div class="form-group">
+							<label for="client_secret">CLIENT SECRET</label>
+							<input type="text" class="form-control" id="client_secret" name="client_secret"
+								aria-describedby="emaclient_secret_help" placeholder="Enter CLIENT SECRET">
+						</div>
+						<div class="form-group">
+							<label for="redirect_uri">REDIRECT URI</label>
+							<input type="text" class="form-control" id="redirect_uri" name="redirect_uri"
+								value="https://ruqqus-auth.glitch.me/redirect" disabled>
+							<small id="redirect_uri_help" class="form-text text-muted">In order for this website to work
+								you need to add this redirect uri to your app's redirect uri's list.</small>
+						</div>
+						<div class="form-group">
+							<label for="scope_list">SCOPE LIST <small>(scopes separated by comma)</small></label>
+							<input type="text" class="form-control" id="scope_list" name="scope_list"
+								aria-describedby="scope_list_help" placeholder="identity, create, read....">
+							<small id="scope_list_help" class="form-text text-muted"><a data-toggle="collapse"
+									href="#showScopes" role="button" aria-expanded="false" aria-controls="showScopes">
+									See
+								</a> all of the available scopes.</small>
+							<div class="collapse" id="showScopes">
+								
+									<input type="text" class="form-control" id="redirect_uri"
+								value="identity, create, read, update, delete, vote, guildmaster" disabled>
+								
+							</div>
+						</div>
 
-					<p>Ethical Kickstarter PBR asymmetrical lo-fi. Dreamcatcher street art Carles, stumptown gluten-free
-						Kickstarter artisan Wes Anderson wolf pug. Godard sustainable you probably haven't heard of
-						them, vegan farm-to-table Williamsburg slow-carb
-						readymade disrupt deep v. Meggings seitan Wes Anderson semiotics, cliche American Apparel
-						whatever. Helvetica cray plaid, vegan brunch Banksy leggings +1 direct trade. Wayfarers codeply
-						PBR selfies. Banh mi McSweeney's Shoreditch selfies,
-						forage fingerstache food truck occupy YOLO Pitchfork fixie iPhone fanny pack art party Portland.
-					</p>
+						<button type="submit" class="btn btn-primary">Submit</button>
+					</form>
+
 				</div>
 			</div>
-	
-		</div>
 
+		</div>
 
 	</main>
 </body>
