--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,7 +26,7 @@
 </header>
 
 <body>
-	<%- include('partials/nav'); -%>
+	<%- include('partials/front_nav'); -%>
 	<main>
 		<div class="container pt-5">
 			<div class="row">
