--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,8 +30,8 @@
 	<main>
 		<div class="container pt-5">
 			<div class="row">
-				<div class="col-12">
-					<h3>Get your access key</h3>
+				<div class="col-12 card automatic">
+					<h3>Get your access tokens</h3>
 					<p>Input your app's info. Don't worry, none of the info is stored.</p>
 
 					<form action="/auth" method="POST">
@@ -66,6 +66,27 @@
 								value="identity, create, read, update, delete, vote, guildmaster" disabled>
 								
 							</div>
+						</div>
+
+						<button type="submit" class="btn btn-primary">Submit</button>
+					</form>
+
+				</div>
+				<hr>
+				<div class="col-12 card automatic">
+					<h3>Refresh your expired access token</h3>
+					<p>Once your access token expires you need to refresh it, we also have a way to do that!</p>
+
+					<form action="/refresh" method="POST">
+						<div class="form-group">
+							<label for="client_id">CLIENT ID</label>
+							<input type="text" class="form-control" id="client_id" name="client_id"
+								aria-describedby="client_id_help" placeholder="Enter CLIENT ID">
+						</div>
+						<div class="form-group">
+							<label for="client_secret">CLIENT SECRET</label>
+							<input type="text" class="form-control" id="client_secret" name="client_secret"
+								aria-describedby="emaclient_secret_help" placeholder="Enter CLIENT SECRET">
 						</div>
 
 						<button type="submit" class="btn btn-primary">Submit</button>
