--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-sm fixed-top navbar-light">
+<nav class="navbar navbar-expand-sm navbar-light fixed-top bg-light">
 	<div class="container">
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
 			<span class="navbar-toggler-icon"></span>
