--- a/views/about.ejs
+++ b/views/about.ejs
@@ -10,9 +10,9 @@
 	<main>
 		<div class="container pt-5">
 			<div class="row">
-				<div class="col-12 card automatic" style="margin-top: 10vh;">
+				<div class="col-12" style="margin-top: 10vh;">
 					<h2>AutoAuth for ruqqus</h2>
-					<p class="text-white">Automatic and secure way to get <strong>ruqqus</strong> api authentication token</p>
+					<p>Automatic and secure way to get <strong>ruqqus</strong> api authentication token</p>
 
 				</div>
 			</div>
