--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,7 +34,7 @@
 			<div class="row">
 				<div class="col-12 card automatic" id="getTokens">
 					<h3>Get your access tokens</h3>
-					<p>Input your app's info. Don't worry, none of the info is stored.</p>
+					<p>Input your app's info. Don't worry, we don't store your data.</p>
 
 					<form action="/auth" method="POST">
 						<div class="form-group">
