--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,12 +40,12 @@
 						<div class="form-group">
 							<label for="client_id">CLIENT ID</label>
 							<input type="text" class="form-control" id="client_id" name="client_id"
-								aria-describedby="client_id_help" placeholder="Enter CLIENT ID">
+								aria-describedby="client_id_help" placeholder="Enter CLIENT ID" required>
 						</div>
 						<div class="form-group">
 							<label for="client_secret">CLIENT SECRET</label>
 							<input type="text" class="form-control" id="client_secret" name="client_secret"
-								aria-describedby="emaclient_secret_help" placeholder="Enter CLIENT SECRET">
+								aria-describedby="emaclient_secret_help" placeholder="Enter CLIENT SECRET" required>
 						</div>
 						<div class="form-group">
 							<label for="redirect_uri">REDIRECT URI</label>
@@ -57,7 +57,7 @@
 						<div class="form-group">
 							<label for="scope_list">SCOPE LIST <small>(scopes separated by comma)</small></label>
 							<input type="text" class="form-control" id="scope_list" name="scope_list"
-								aria-describedby="scope_list_help" placeholder="identity, create, read....">
+								aria-describedby="scope_list_help" placeholder="identity, create, read...." required>
 							<small id="scope_list_help" class="form-text text-muted"><a data-toggle="collapse"
 									href="#showScopes" role="button" aria-expanded="false" aria-controls="showScopes">
 									See
@@ -83,17 +83,17 @@
 						<div class="form-group">
 							<label for="client_id">CLIENT ID</label>
 							<input type="text" class="form-control" id="client_id" name="client_id"
-								aria-describedby="client_id_help" placeholder="Enter CLIENT ID">
+								aria-describedby="client_id_help" placeholder="Enter CLIENT ID" required>
 						</div>
 						<div class="form-group">
 							<label for="client_secret">CLIENT SECRET</label>
 							<input type="text" class="form-control" id="client_secret" name="client_secret"
-								aria-describedby="client_secret_help" placeholder="Enter CLIENT SECRET">
+								aria-describedby="client_secret_help" placeholder="Enter CLIENT SECRET" required>
 						</div>
 						<div class="form-group">
 							<label for="refresh_token">REFRESH TOKEN</label>
 							<input type="text" class="form-control" id="refresh_token" name="refresh_token"
-								aria-describedby="refresh_token_help" placeholder="Enter REFRESH TOKEN">
+								aria-describedby="refresh_token_help" placeholder="Enter REFRESH TOKEN" required>
 						</div>
 
 						<button type="submit" class="btn btn-primary">Submit</button>
