--- a/public/style.css
+++ b/public/style.css
@@ -2,7 +2,7 @@ header {
 	height: 100vh;
 	min-height: 700px;
 	background-size: cover;
-	background-image: linear-gradient(to top right,#805ad5, #2b6eff);
+	background-image: linear-gradient(to top right,#805ad5, #2b87ff);
 	background-attachment: fixed;
 	background-position: center;
 	background-repeat: no-repeat;
