--- a/views/results.ejs
+++ b/views/results.ejs
@@ -18,48 +18,58 @@
 					<form>
 						<div class="form-group">
 							<label for="access_token">ACCESS TOKEN</label>
-							<input type="text" class="form-control" id="access_token" name="access_token"
-								aria-describedby="access_token" value="<%= data.access_token %>" disabled>
+							<input type="text" class="form-control copy-link" id="access_token" name="access_token"
+								aria-describedby="access_token" value="<%= data.access_token %>"
+								data-clipboard-text="<%= data.access_token %>" role="button" readonly="readonly">
 						</div>
 						<% if(data.refresh_token != null) { %>
 						<div class="form-group">
 							<label for="refresh_token">REFRESH TOKEN</label>
-							<input type="text" class="form-control" id="refresh_token" name="refresh_token"
-								aria-describedby="refresh_token" value="<%= data.refresh_token %>" disabled>
+							<input type="text" class="form-control copy-link" id="refresh_token" name="refresh_token"
+								aria-describedby="refresh_token" value="<%= data.refresh_token %>"
+								data-clipboard-text="<%= data.refresh_token %>" role="button" readonly="readonly">
 						</div>
 						<% } %>
 						<% if(data.scopes != null) { %>
 						<div class="form-group">
 							<label for="scope_list">SCOPES</label>
-							<input type="text" class="form-control" id="scope_list" name="scope_list"
-								aria-describedby="scope_list" value="<%= data.scopes %>" disabled>
+							<input type="text" class="form-control copy-link" id="scope_list" name="scope_list"
+								aria-describedby="scope_list" value="<%= data.scopes %>"
+								data-clipboard-text="<%= data.scopes %>" role="button" readonly="readonly">
 						</div>
 						<% } %>
 						<div class="form-group">
 							<label for="expires_at">EXPIRES AT</label>
-							<input type="text" class="form-control" id="expires_at" name="expires_at"
-								aria-describedby="expires_at" value="<%= data.expires_at %>" disabled>
-							<small id="scope_list_help" class="form-text text-muted"><a data-toggle="collapse"
-									href="#showDate" role="button" aria-expanded="false" aria-controls="showScopes">
+							<input type="text" class="form-control copy-link" id="expires_at" name="expires_at"
+								aria-describedby="expires_at" value="<%= data.expires_at %>"
+								data-clipboard-text="<%= data.expires_at %>" role="button" readonly="readonly">
+							<small id="expires_at_human_readable" class="form-text text-muted"><a data-toggle="collapse"
+									href="#showDate" role="button" aria-expanded="false"
+									aria-controls="showHumanReadableDate">
 									See
 								</a> human readable date.</small>
 
 							<div class="collapse" id="showDate">
 
-								<input type="text" class="form-control" id="redirect_uri"
-									value="<%= data.expires_at_human_readable %>" disabled>
+								<input type="text" class="form-control copy-link" id="human_readable"
+									value="<%= data.expires_at_human_readable %>"
+									data-clipboard-text="<%= data.expires_at_human_readable %>" role="button"
+									readonly="readonly">
 
 							</div>
 						</div>
 					</form>
 					<% } %>
 
+
+
 				</div>
 			</div>
 
 		</div>
-
+		<%- include('partials/copied'); -%>
 	</main>
+
 </body>
 
 </html>
