more advanced user session

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -13,6 +13,24 @@
 				<div class="col-12" style="margin-top: 10vh;">
 					<h2>AutoAuth for ruqqus</h2>
 					<p>Automatic and secure way to get <strong>ruqqus</strong> api authentication token</p>
+					<hr>
+					<div class="card automatic">
+						<p>
+							Fast and automatic way to get ruqqus access token for developing or testing
+							purposes
+						</p>
+					</div>
+					<div class="card automatic">
+						<p>
+							None of the data is logged, and all of the temporary data (app state...) gets deleted with
+							user session, so there is no way for anyone to see any of the private data.
+						</p>
+					</div>
+					<div class="card automatic">
+						<p>
+							The app code is open source on GitHub, and the app gets build from it
+						</p>
+					</div>
 
 				</div>
 			</div>
