--- a/views/errors/404.ejs
+++ b/views/errors/404.ejs
@@ -18,7 +18,7 @@
                 <h2>
                     Page not found!</h2>
                 <div class="error-details">
-					Sorry, an error happened! Requested page not found!
+					Sorry, we couldn't find the page you requested!
                 </div>
 
             </div>
