--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,7 +34,8 @@
 			<div class="row">
 				<div class="col-12 card automatic" id="getTokens">
 					<h3>Get your access tokens</h3>
-					<p>Input your app's info. Don't worry, we don't store your data.</p>
+					<p>Input your app's info. Don't worry, we don't store your data. <small><a href="/help/app_info">Where do I find this info?</a></small></p>
+					
 
 					<form action="/auth" method="POST">
 						<div class="form-group">
@@ -79,7 +80,7 @@
 				<hr>
 				<div class="col-12 card automatic" id="refreshToken">
 					<h3>Refresh your expired access token</h3>
-					<p>Once your access token expires you need to refresh it, we also have a way to do that!</p>
+					<p>Once your access token expires you need to refresh it, and we got you covered!</p>
 
 					<form action="/refresh" method="POST">
 						<div class="form-group">
