--- a/views/partials/front_nav.ejs
+++ b/views/partials/front_nav.ejs
@@ -14,9 +14,9 @@
 				<li class="nav-item">
 					<a class="nav-link text-white active" href="/about">About</a>
 				</li>
-				<li class="nav-item active">
+				<!--<li class="nav-item active">
 					<a class="nav-link text-white active" href="/faq">FAQ</a>
-				</li>
+				</li>-->
 			</ul>
 			<ul class="navbar-nav ml-auto">
 				<li class="nav-item active">
