--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,7 @@
 
 <header>
 	<div class="container">
+		<%- include('partials/front_nav'); -%>
 		<div class="jumbotron front text-center"></div>
 		<div class="container">
 			<h1 class="display-3 text-white" style="font-family: 'Inter', sans-serif;">
@@ -28,7 +29,7 @@
 </header>
 
 <body>
-	<%- include('partials/front_nav'); -%>
+
 	<main>
 		<div class="container pt-5">
 			<div class="row">
@@ -111,4 +112,6 @@
 	</main>
 </body>
 
+
+<%- include('partials/footer'); -%>
 </html>
