check if scopes are valid

--- a/views/results.ejs
+++ b/views/results.ejs
@@ -58,6 +58,10 @@
 
 							</div>
 						</div>
+						<div class="form-group">
+							<a class="btn btn-primary" href="/#getTokens">Get Access Tokens</a>
+							<a class="btn btn-secondary" href="/#refreshToken">Refresh Access Token</a>
+						</div>
 					</form>
 					<% } %>
 
