Trim code and add custom URI support

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -58,6 +58,14 @@
 								readonly="readonly">
 							<small id="redirect_uri_help" class="form-text text-muted">In order for this website to work
 								you need to add this redirect uri to your app's redirect uri's list.</small>
+							<small id="redirect_uri_help" class="form-text text-muted"><a data-toggle="collapse"
+									href="#useCustomUri">Use your custom URI instead</a></small>
+							<div class="collapse" id="useCustomUri">
+
+								<input type="text" class="form-control" id="custom_uri" name="custom_uri"
+									placeholder="Enter your custom redirect URI">
+
+							</div>
 						</div>
 						<div class="form-group">
 							<label for="scope_list">SCOPE LIST <small>(scopes separated by comma)</small></label>
