--- a/public/style.css
+++ b/public/style.css
@@ -2,7 +2,7 @@ header {
 	height: 100vh;
 	min-height: 700px;
 	background-size: cover;
-	background-image: linear-gradient(to top right,#805ad5, #2b87ff);
+	background-image: linear-gradient(to top right, #805ad5, #2b87ff);
 	background-attachment: fixed;
 	background-position: center;
 	background-repeat: no-repeat;
@@ -11,6 +11,21 @@ header {
 
 body {
 	padding-bottom: 5vh;
+	margin-bottom: 60px;
+}
+
+html {
+	position: relative;
+	min-height: 100%;
+}
+
+.footer {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	height: 60px;
+	line-height: 60px;
+	background-color: #f5f5f5;
 }
 
 .container.header {
@@ -37,7 +52,6 @@ body {
 	margin-bottom: 10px;
 	background-color: rgba(0, 0, 0, 0) !important;
 }
-
 
 .btn-primary {
 	background-color: #FFF;
