--- a/views/index.ejs
+++ b/views/index.ejs
@@ -78,7 +78,7 @@
 
 								<input type="text" class="form-control copy-link" id="redirect_uri"
 									value="identity, create, read, update, delete, vote, guildmaster"
-									data-clipboard-text="https://ruqqus-auth.glitch.me/redirect" role="button"
+									data-clipboard-text="identity, create, read, update, delete, vote, guildmaster" role="button"
 									readonly="readonly">
 
 							</div>
