--- a/views/help/app_info.ejs
+++ b/views/help/app_info.ejs
@@ -11,7 +11,7 @@
 		<div class="container pt-5">
 			<div class="row">
 				<div class="col-12 card automatic" style="margin-top: 10vh;">
-					<h1>Where to find apps info</h1>
+					<h1>Where to find app info</h1>
 					<hr>
 					<p>Once you <a href="/help/get_app">created you app</a> after it got aproved you can find all the necesary info for this website to function in you <strong>ruqqus</strong> account settings under <a href="https://ruqqus.com/settings/apps" target="blank">apps page</a></p>
 					<p><img src="/assets/images/app.png"
